<resources>
    <string name="app_name">ColonyKeeper</string>
    <string name="add_hive_title">Add Hive</string>
    <string name="name_input_placeholder">Name</string>
    <string name="notes_input_placeholder">Notes</string>
    <string name="queen_date_placeholder">Queen Date</string>
    <string name="take_picture_gps_placeholder">Take Picture + GPS</string>
    <string name="add_hive_button">Submit Hive</string>
    <string name="add_bee_yard_title">Add Bee Yard</string>
    <string name="add_yard_button">Submit Yard</string>
    <string name="add_inspection_title">Add Inspection</string>
    <string name="inspection_text_input_hint">Add notes…</string>
    <string name="add_voice_inspection_content_desc">Add voice inspection</string>
    <string name="add_inspection_back_content_desc">Back to previous screen</string>
    <string name="inspection_add_photo_button">Add Photo</string>
    <string name="submit_inspection_button">Submit Inspection</string>
    <string name="hive_past_inspections_button">View Past Inspections</string>
    <string name="schedule_inspection_button">Schedule Inspection</string>
    <string name="start_new_inspection_button">Start New Inspection</string>
    <string name="edit_hive_button">Edit Hive</string>
    <string name="schedule_inspection_title">Schedule Inspection</string>
    <string name="choose_time_label">Choose Time:</string>
    <string name="yard_gallery_button">Yard Gallery</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="no_location_text">No current location</string>
    <string name="colonykeeper">Colony Keeper</string>
    <string name="start">Start</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="new_photo">ADD PHOTO</string>
    <string name="edit_name_photo">New Photo</string>
    <string name="delete">Delete</string>
    <string name="add_hive">Add Hive</string>
    <string name="edit_yard">Edit Yard</string>
    <string name="plan_inspection">Plan Inspection</string>
    <string name="saved_inspections">Saved Inspections:</string>
    <string name="make_pdf">Make PDF</string>
    <string name="navigate_to_previous_day">Navigate to previous day</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="navigate_to_next_day">Navigate to next day</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="submit">Submit</string>
    <string name="add_yard">Add Yard</string>
    <string name="new_report">New Report</string>
    <string name="manage_inspections">Manage Inspections</string>
    <string name="reminder">Reminder</string>
    <string name="future_inspections">Future Inspections</string>
    <string name="file_name">File Name...</string>
    <string name="create_report">Create Report</string>

</resources>