<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_bee_hive_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lalezar"
        android:text="@string/add_hive_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bee_hive_name_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_bee_hive_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bee_hive_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input_placeholder"
            android:singleLine="true"
            android:imeOptions="actionDone"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bee_hive_queen_date_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bee_hive_name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bee_hive_queen_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/queen_date_placeholder"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bee_hive_notes_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bee_hive_queen_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bee_hive_notes_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_input_placeholder"
            android:singleLine="true"
            android:imeOptions="actionDone"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_picture_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/inspection_add_photo_button"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bee_hive_notes_input_layout" />

    <Button
        android:id="@+id/add_bee_hive_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/add_hive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_picture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>