<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_inspection_title"
        android:text="@string/add_inspection_title"
        android:fontFamily="@font/lalezar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"/>

    <ImageButton
        android:id="@+id/add_inspection_voice_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add_voice_inspection_content_desc"
        android:src="@drawable/ic_baseline_mic_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inspection_input_layout"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_inspection_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inspection_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="top|start"
            android:hint="@string/inspection_text_input_hint"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inspectPicRecyclerView"
        android:layout_width="339dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection_input_layout" />

    <Button
        android:id="@+id/add_picture_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/inspection_add_photo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inspectPicRecyclerView" />

    <Button
        android:id="@+id/submit_inspection_button"
        android:text="@string/submit_inspection_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/add_picture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>