<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reportYard"
        android:text="@string/create_report"
        android:fontFamily="@font/lalezar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pdf_name_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportYard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pdf_name_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_name"
            android:singleLine="true"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/makePDF"
        android:layout_width="207dp"
        android:layout_height="77dp"
        android:text="@string/make_pdf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportYard" />

</androidx.constraintlayout.widget.ConstraintLayout>