<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_bee_yard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lalezar"
        android:text="@string/add_bee_yard_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@id/bee_yard_name_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id ="@+id/bee_yard_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bee_yard_name_input_layout"
        app:layout_constraintTop_toBottomOf="@id/add_bee_yard_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bee_yard_name_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bee_yard_gps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bee_yard_picture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bee_yard_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input_placeholder" />


    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id ="@+id/bee_yard_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bee_yard_notes_input_layout"
        app:layout_constraintTop_toBottomOf="@id/bee_yard_name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bee_yard_notes_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/add_picture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bee_yard_gps">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bee_yard_notes_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_input_placeholder" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_picture_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/inspection_add_photo_button"
        app:layout_constraintBottom_toTopOf="@id/add_bee_yard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bee_yard_notes_input_layout" />

    <Button
        android:id="@+id/add_bee_yard_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/add_yard_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_picture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>